updates video link to youtube

--- a/Misc/XY Belt Calibration.ipynb
+++ b/Misc/XY Belt Calibration.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "### Video Tutorial on Calibrating XY belts\n",
     "\n",
-    "Follow along with [this video tutorial](https://vimeo.com/202404823). It will show you how to run this notebook and measure your robot's XY belts.\n",
+    "Follow along with [this video tutorial](https://www.youtube.com/watch?v=Y2Xd7FFzQLk). It will show you how to run this notebook and measure your robot's XY belts.\n",
     "\n",
     "### Tools Required\n",
     "\n",
