adds custom container creation

--- a/Misc/XY Belt Calibration.ipynb
+++ b/Misc/XY Belt Calibration.ipynb
@@ -34,11 +34,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of the port to connect to:\n",
+      "\n",
+      "  0)   /dev/tty.usbmodem1421\n",
+      "\n",
+      "Enter number next to desired port (0, 1, etc): 0\n",
+      "Connected, homing...\n",
+      "Enter distanct for X to travel (max 350):250\n",
+      "Enter distanct for Y to travel (max 350):250\n",
+      "Moving the robot 250mm on the X, and 250mm on the Y\n",
+      "mark X position on the robot, then press ENTER key\n",
+      "mark Y position on the robot, then press ENTER key\n",
+      "enter the measured X distance: 250\n",
+      "enter the measured Y distance: 250\n",
+      "New values saved. Restarting the robot to allow changes to take effect\n",
+      "Please wait 5-10 seconds before reconnecting to the robot\n"
+     ]
+    }
+   ],
    "source": [
     "from opentrons import robot\n",
     "\n",
@@ -118,6 +140,15 @@
    "source": [
     "### follow the print-outs you'll see above ^^^"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
