--- a/Setup/Containers.ipynb
+++ b/Setup/Containers.ipynb
@@ -104,12 +104,61 @@
     "fb = containers.load('T25-flask', 'D1', 'flask_b')\n",
     "fc = containers.load('T25-flask', 'D1', 'flask_c')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create\n",
+    "\n",
+    "In addition to the default containers that come with the Opentrons API, you can create your own custom containers.\n",
+    "\n",
+    "Through the API's call `containers.create()`, you can create simple grid containers, which consist of circular wells arranged in columns and rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "custom_plate = containers.create(\n",
+    "    'C1',                           # slot on the robot's deck\n",
+    "    grid=(3, 6),                    # specify amount of (columns, rows)\n",
+    "    spacing=(12, 12),               # distances (mm) between each (column, row)\n",
+    "    diameter=5,                     # diameter (mm) of each well on the plate\n",
+    "    depth=10,                       # depth (mm) of each well on the plate\n",
+    "    name='3x6_plate')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you save your custom container with a `name=` argument, then it will be saved for later use. This means you can use `containers.load()` to use the custom container you've created in any future protocol."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "custom_plate = containers.load('3x6_plate', 'D1')\n",
+    "\n",
+    "for well in custom_plate:\n",
+    "    print(well)"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -123,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
