updates containers.create() method examples

--- a/Setup/Containers.ipynb
+++ b/Setup/Containers.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -124,20 +124,19 @@
    },
    "outputs": [],
    "source": [
-    "custom_plate = containers.create(\n",
-    "    'C1',                           # slot on the robot's deck\n",
+    "containers.create(\n",
+    "    '3x6_plate',                    # name of you container\n",
     "    grid=(3, 6),                    # specify amount of (columns, rows)\n",
     "    spacing=(12, 12),               # distances (mm) between each (column, row)\n",
     "    diameter=5,                     # diameter (mm) of each well on the plate\n",
-    "    depth=10,                       # depth (mm) of each well on the plate\n",
-    "    name='3x6_plate')"
+    "    depth=10)                       # depth (mm) of each well on the plate"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When you save your custom container with a `name=` argument, then it will be saved for later use. This means you can use `containers.load()` to use the custom container you've created in any future protocol."
+    "When you create your custom container, then it will be saved for later use under the name you've given it. This means you can use `containers.load()` to use the custom container you've created in this and any future protocol."
    ]
   },
   {
