creates notebook for Transfer command

--- a/Commands/Liquid Control.ipynb
+++ b/Commands/Liquid Control.ipynb
@@ -191,6 +191,27 @@
     "pipette.mix(3, 50)                 # mix 3 times, 50uL, in current location\n",
     "pipette.mix(2)                     # mix 2 times, pipette's max volume, in current location"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Air Gap\n",
+    "\n",
+    "Some liquids need an extra amount of air in the pipette's tip to prevent it from sliding out. A call to `.air_gap()` with a microliter amount will aspirate that much air into the tip."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pipette.aspirate(100, plate['B4'])\n",
+    "pipette.air_gap(20)"
+   ]
   }
  ],
  "metadata": {
