--- a/atomic_commands/Liquid Control.ipynb
+++ b/atomic_commands/Liquid Control.ipynb
@@ -8,6 +8,19 @@
     "\n",
     "Demonstrates the usage for liquid-handling specific commands\n",
     "\n",
+    "##### This `Transfer` command...\n",
+    "```python\n",
+    "pipette.transfer(20, plate.cols['A'], plate.cols['B'])\n",
+    "```\n",
+    "##### can instead be written like this:\n",
+    "```python\n",
+    "pipette.pick_up_tip()\n",
+    "for i in range(12):\n",
+    "    pipette.aspirate(20, plate.cols['A'][i])\n",
+    "    pipette.dispense(20, plate.cols['B'][i])\n",
+    "pipette.drop_tip()\n",
+    "```\n",
+    "\n",
     "To get these examples working, we will need a pipette and a plate:"
    ]
   },
@@ -217,7 +230,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -231,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
