--- a/writing_protocols/Transfer.ipynb
+++ b/writing_protocols/Transfer.ipynb
@@ -6,20 +6,7 @@
    "source": [
     "# Transfer\n",
     "\n",
-    "The `.transfer()` command is built up from other API commands (like `.aspirate()`, `.dispense()`, and `.drop_tip()`), and allows you to describe the movement of liquids with less words and loops.\n",
-    "\n",
-    "##### This `for` loop...\n",
-    "```python\n",
-    "pipette.pick_up_tip()\n",
-    "for i in range(12):\n",
-    "    pipette.aspirate(20, plate.cols['A'][i])\n",
-    "    pipette.dispense(20, plate.cols['B'][i])\n",
-    "pipette.drop_tip()\n",
-    "```\n",
-    "##### can instead be written like this:\n",
-    "```python\n",
-    "pipette.transfer(20, plate.cols['A'], plate.cols['B'])\n",
-    "```"
+    "The `.transfer()` command is built up from other API commands (like `.aspirate()`, `.dispense()`, and `.drop_tip()`), and allows you to describe the movement of liquids with less words and loops."
    ]
   },
   {
@@ -262,7 +249,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -276,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
