Fix incorrect output of serial port index

--- a/Misc/XY Belt Calibration.ipynb
+++ b/Misc/XY Belt Calibration.ipynb
@@ -84,7 +84,7 @@
     "        raise RuntimeError(\n",
     "            'No serial ports found. Please make sure your robot\\'s USB cable is connected')\n",
     "    for i, portname in enumerate(ports):\n",
-    "        print('  {0})   {1}\\n'.format(count, portname))\n",
+    "        print('  {0})   {1}\\n'.format(i, portname))\n",
     "    val = input('Enter number next to desired port (0, 1, etc): '.format(1, count))\n",
     "    try:\n",
     "        val = int(val)\n",
