adds content to Wells() pages

--- a/writing_protocols/Access Individual Wells.ipynb
+++ b/writing_protocols/Access Individual Wells.ipynb
@@ -4,26 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Access Individual Wells"
+    "# Access Individual Wells\n",
+    "\n",
+    "When writing a protocol using the API, you will be spending most of your time selecting which wells to transfer liquids to and from.\n",
+    "\n",
+    "The following examples require the plate loaded below"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "from opentrons import containers\n",
-    "plate = containers.load('96-flat', 'B1')"
+    "\n",
+    "plate = containers.load('96-flat', 'A1')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Individual Wells"
+    "### Individual Wells\n",
+    "\n",
+    "Once a container is loaded into your protocol, you can easily access the many wells within it using `.wells()` method. `.wells()` takes the name of the well as an argument, and will return the well at that location."
    ]
   },
   {
@@ -34,8 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "well = plate[0]\n",
-    "print(well)"
+    "plate.wells('A1')"
    ]
   },
   {
@@ -46,8 +52,16 @@
    },
    "outputs": [],
    "source": [
-    "well = plate['A1']\n",
-    "print(well)"
+    "plate.wells('H12')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Wells can be referenced by their \"string\" name, as demonstrated above. However, they can also be referenced with zero-indexing, with the first well in a container being at position `0`."
    ]
   },
   {
@@ -58,15 +72,40 @@
    },
    "outputs": [],
    "source": [
-    "well = plate.wells('A1')\n",
-    "print(well)"
+    "plate.wells(0)  # well A1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plate.wells(95)  # well H12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plate.wells(-1)  # well H12 (Python let's you do this)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Columns and Rows"
+    "### Columns and Rows\n",
+    "\n",
+    "A container's wells are organized within a series of columns and rows, which are also labelled on standard labware. In the API, columns are given letter names (`'A'` through `'H'` for example) and go left to right, while rows are given numbered names (`'1'` through `'8'` for example) and go from front to back.\n",
+    "\n",
+    "You can access a specific row or column by using the `.rows()` and `.cols()` methods on a container. These will return all wells within that row or column."
    ]
   },
   {
@@ -77,9 +116,18 @@
    },
    "outputs": [],
    "source": [
-    "column = plate.cols['C']\n",
-    "for well in column:\n",
-    "    print(well)"
+    "column = plate.cols('A')\n",
+    "row = plate.rows('1')\n",
+    "\n",
+    "print('Column \"A\" has', len(column), 'wells')\n",
+    "print('Row \"1\" has', len(row), 'wells')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `.rows()` or `.cols()` methods can be used in combination with the `.wells()` method to access wells within that row or column."
    ]
   },
   {
@@ -90,8 +138,7 @@
    },
    "outputs": [],
    "source": [
-    "well = plate.cols['C']['3']\n",
-    "print(well)"
+    "plate.cols('A').wells('1')"
    ]
   },
   {
@@ -102,18 +149,8 @@
    },
    "outputs": [],
    "source": [
-    "well = plate.rows['3']['C']\n",
-    "print(well)"
+    "plate.rows('1').wells('A')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
