updates Transfer, Consolidate, Distribute pages

--- a/writing_protocols/Transfer.ipynb
+++ b/writing_protocols/Transfer.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "pipette.transfer(100, plate['A1'], plate['B1'])\n",
+    "pipette.transfer(100, plate.wells('A1'), plate.wells('B1'))\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -72,7 +72,7 @@
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "pipette.transfer(800, plate['A2'], plate['B2'])\n",
+    "pipette.transfer(800, plate.wells('A2'), plate.wells('B2'))\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -102,7 +102,7 @@
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "pipette.transfer(100, plate.rows['1'], plate.rows['2'])\n",
+    "pipette.transfer(100, plate.rows('1'), plate.rows('2'))\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -126,7 +126,7 @@
     "robot.clear_commands()\n",
     "\n",
     "volumes = [10, 20, 30, 40, 50, 60, 70, 80]\n",
-    "pipette.transfer(volumes, plate.rows['3'], plate.rows['4'])\n",
+    "pipette.transfer(volumes, plate.rows('3'), plate.rows('4'))\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -147,7 +147,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.transfer(50, plate.rows['2'], plate.rows['3'], new_tips='once')"
+    "pipette.transfer(50, plate.rows('2'), plate.rows('3'), new_tips='once')"
    ]
   },
   {
@@ -158,7 +158,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.transfer(50, plate.rows['3'], plate.rows['4'], new_tips='never')"
+    "pipette.transfer(50, plate.rows('2'), plate.rows('3'), new_tips='never')"
    ]
   },
   {
@@ -169,7 +169,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.transfer(50, plate.rows['4'], plate.rows['5'], new_tips='every')"
+    "pipette.transfer(50, plate.rows('2'), plate.rows('3'), new_tips='every')"
    ]
   },
   {
@@ -180,7 +180,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.transfer(50, plate.rows['4'], plate.rows['5'], trash=False)"
+    "pipette.transfer(50, plate.rows('2'), plate.rows('3'), trash=False)"
    ]
   },
   {
@@ -198,7 +198,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.transfer(100, plate.rows['1'], plate.rows['2'], touch_tip=True)"
+    "pipette.transfer(100, plate.rows('1'), plate.rows('2'), touch_tip=True)"
    ]
   },
   {
@@ -209,7 +209,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.transfer(100, plate.rows['1'], plate.rows['2'], blow_out=True)"
+    "pipette.transfer(100, plate.rows('1'), plate.rows('2'), blow_out=True)"
    ]
   },
   {
@@ -220,7 +220,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.transfer(100, plate.rows['1'], plate.rows['2'], mix_before=(2, 50))"
+    "pipette.transfer(100, plate.rows('1'), plate.rows('2'), mix_before=(2, 50))"
    ]
   },
   {
@@ -231,7 +231,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.transfer(100, plate.rows['1'], plate.rows['2'], mix_after=(2, 50))"
+    "pipette.transfer(100, plate.rows('1'), plate.rows('2'), mix_after=(2, 50))"
    ]
   },
   {
@@ -242,7 +242,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.transfer(100, plate.rows['1'], plate.rows['2'], air_gap=20)"
+    "pipette.transfer(100, plate.rows('1'), plate.rows('2'), air_gap=20)"
    ]
   }
  ],
