--- a/Setup/Containers.ipynb
+++ b/Setup/Containers.ipynb
@@ -149,7 +149,7 @@
    "source": [
     "custom_plate = containers.load('3x6_plate', 'D1')\n",
     "\n",
-    "for well in custom_plate:\n",
+    "for well in custom_plate.wells():\n",
     "    print(well)"
    ]
   }
