--- a/commands/Accessing Multiple Wells.ipynb
+++ b/commands/Accessing Multiple Wells.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Access Multiple Wells\n",
+    "# Accessing Multiple Wells\n",
     "\n",
     "If we had to reference each well one at a time, our protocols could get very very long.\n",
     "\n",
