--- a/commands/Liquid Control.ipynb
+++ b/commands/Liquid Control.ipynb
@@ -6,20 +6,7 @@
    "source": [
     "# Liquid Control\n",
     "\n",
-    "Demonstrates the usage for liquid-handling specific commands\n",
-    "\n",
-    "##### This `Transfer` command...\n",
-    "```python\n",
-    "pipette.transfer(20, plate.cols['A'], plate.cols['B'])\n",
-    "```\n",
-    "##### can instead be written like this:\n",
-    "```python\n",
-    "pipette.pick_up_tip()\n",
-    "for i in range(12):\n",
-    "    pipette.aspirate(20, plate.cols['A'][i])\n",
-    "    pipette.dispense(20, plate.cols['B'][i])\n",
-    "pipette.drop_tip()\n",
-    "```\n",
+    "Demonstrates the usage for liquid-handling specific commands.\n",
     "\n",
     "To get these examples working, we will need a pipette and a plate:"
    ]
@@ -55,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.aspirate(50, plate['A1'])  # aspirate 50uL from plate:A1"
+    "pipette.aspirate(50, plate.wells('A1'))  # aspirate 50uL from plate:A1"
    ]
   },
   {
@@ -64,7 +51,7 @@
    "source": [
     "Now our pipette's tip is now holding 50uL.\n",
     "\n",
-    "We can also simply specify how many microliters to aspirate, and not mention a location. The pipette in this circumstance will aspirate from it's current location (which we previously set as `plate['A1']`)."
+    "We can also simply specify how many microliters to aspirate, and not mention a location. The pipette in this circumstance will aspirate from it's current location (which we previously set as `plate.wells('A1')`)."
    ]
   },
   {
@@ -95,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.aspirate(plate['A2'])      # aspirate until pipette fills from plate:A2"
+    "pipette.aspirate(plate.wells('A2'))      # aspirate until pipette fills from plate:A2"
    ]
   },
   {
@@ -115,9 +102,9 @@
    },
    "outputs": [],
    "source": [
-    "pipette.dispense(50, plate['B1'])  # dispense 50uL to plate:B1\n",
+    "pipette.dispense(50, plate.wells('B1'))  # dispense 50uL to plate:B1\n",
     "pipette.dispense(50)               # dispense 50uL to current position\n",
-    "pipette.dispense(plate['B2'])      # dispense until pipette empties to plate:B2"
+    "pipette.dispense(plate.wells('B2'))      # dispense until pipette empties to plate:B2"
    ]
   },
   {
@@ -147,7 +134,7 @@
    "outputs": [],
    "source": [
     "pipette.blow_out()                 # blow out over current location\n",
-    "pipette.blow_out(plate['B3'])      # blow out over current plate:B3"
+    "pipette.blow_out(plate.wells('B3'))      # blow out over current plate:B3"
    ]
   },
   {
@@ -173,7 +160,7 @@
    "source": [
     "pipette.touch_tip()                # touch tip within current location\n",
     "pipette.touch_tip(-2)              # touch tip 2mm below the top of the current location\n",
-    "pipette.touch_tip(plate['B1'])     # touch tip within plate:B1"
+    "pipette.touch_tip(plate.wells('B1'))     # touch tip within plate:B1"
    ]
   },
   {
@@ -196,13 +183,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pipette.mix(4, 100, plate['A2'])   # mix 4 times, 100uL, in plate:A2\n",
-    "pipette.mix(3, 50)                 # mix 3 times, 50uL, in current location\n",
-    "pipette.mix(2)                     # mix 2 times, pipette's max volume, in current location"
+    "pipette.mix(4, 100, plate.wells('A2'))   # mix 4 times, 100uL, in plate:A2\n",
+    "pipette.mix(3, 50)                       # mix 3 times, 50uL, in current location\n",
+    "pipette.mix(2)                           # mix 2 times, pipette's max volume, in current location"
    ]
   },
   {
@@ -222,7 +209,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.aspirate(100, plate['B4'])\n",
+    "pipette.aspirate(100, plate.wells('B4'))\n",
     "pipette.air_gap(20)"
    ]
   }
