--- a/commands/Tips Iterating.ipynb
+++ b/commands/Tips Iterating.ipynb
@@ -96,7 +96,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we try to `pick_up_tip()` again when all the tips have been used, the Opentrons API will show you an error."
+    "If we try to `pick_up_tip()` again when all the tips have been used, the Opentrons API will show you an error.\n",
+    "\n",
+    "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
+    "<p><strong>NOTE</strong></p>\n",
+    "<p>If you run the cell above, and then uncomment and run the cell below, you will get an error because the pipette is out of tips.</p>\n",
+    "</div>"
    ]
   },
   {
@@ -107,7 +112,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.pick_up_tip()  # this will show an error if you already run the above cell"
+    "# pipette.pick_up_tip()  # this will raise an exception"
    ]
   },
   {
@@ -127,11 +132,8 @@
    },
    "outputs": [],
    "source": [
-    "pipette = instruments.Pipette(\n",
-    "    axis='b',\n",
-    "    tip_racks=[tip_rack_1, tip_rack_2],\n",
-    "    trash_container=trash\n",
-    ")\n",
+    "pipette.reset()\n",
+    "\n",
     "pipette.start_at_tip(tip_rack_1['C3'])\n",
     "pipette.pick_up_tip()  # pick up C3 from \"tip_rack_1\"\n",
     "pipette.return_tip()"
@@ -143,7 +145,7 @@
    "source": [
     "### Get Current Tip's Origin\n",
     "\n",
-    "The origin of the pipette's current tip can get received by calling `current_tip()`."
+    "Get the source location of the pipette's current tip by calling `.current_tip()`. If the tip was from the `'A1'` position on our tip rack, `.current_tip()` will return that position."
    ]
   },
   {
@@ -154,21 +156,20 @@
    },
    "outputs": [],
    "source": [
-    "while True:\n",
-    "    pipette.pick_up_tip()\n",
-    "    this_tip = pipette.current_tip()   # save the current tip's origin in a variable\n",
-    "    pipette.return_tip()\n",
-    "    print(this_tip)\n",
-    "    if this_tip is tip_rack_1['H12']:  # detect before we move to second tip rack\n",
-    "        break\n",
-    "print('Exited loop')"
+    "print(pipette.current_tip())  # is holding no tip\n",
+    "\n",
+    "pipette.pick_up_tip()\n",
+    "print(pipette.current_tip())  # is holding the next available tip\n",
+    "\n",
+    "pipette.return_tip()\n",
+    "print(pipette.current_tip())  # is holding no tip"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -182,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
