--- a/Setup/Robot.ipynb
+++ b/Setup/Robot.ipynb
@@ -11,13 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from opentrons import robot, containers, instruments"
+    "from opentrons import robot, containers, instruments\n",
+    "\n",
+    "plate = containers.load('96-flat', 'B1')\n",
+    "tiprack = containers.load('tiprack-200ul', 'A1')\n",
+    "\n",
+    "pipette = instruments.Pipette(axis='b', max_volume=200)"
    ]
   },
   {
@@ -31,14 +36,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'96-flat': <Deck>/<Slot B1>/<Container 96-flat>,\n",
+       " 'tiprack-200ul': <Deck>/<Slot A1>/<Container tiprack-200ul>}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "plate = containers.load('96-flat', 'B1')\n",
-    "print(robot.containers())"
+    "robot.containers()"
    ]
   },
   {
@@ -52,14 +68,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('B', <opentrons.instruments.pipette.Pipette at 0x110901e10>)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pipette = instruments.Pipette(axis='b', max_volume=200)\n",
-    "print(robot.get_instruments())"
+    "robot.get_instruments()"
    ]
   },
   {
@@ -73,26 +99,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <Deck>/<Slot A1>/<Container tiprack-200ul>/<Well A1>\n",
+      "Drop_tip at <Deck>/<Slot A1>/<Container tiprack-200ul>/<Well A1>\n",
+      "Picking up tip from <Deck>/<Slot A1>/<Container tiprack-200ul>/<Well A1>\n",
+      "Drop_tip at <Deck>/<Slot A1>/<Container tiprack-200ul>/<Well A1>\n"
+     ]
+    }
+   ],
    "source": [
-    "robot.reset()\n",
-    "\n",
-    "tiprack = containers.load('tiprack-200ul', 'A1')\n",
-    "plate = containers.load('96-flat', 'B1')\n",
-    "\n",
-    "pipette = instruments.Pipette(axis='b', max_volume=200, min_volume=20)\n",
-    "\n",
-    "pipette.pick_up_tip(tiprack['A1'])\n",
-    "pipette.aspirate(10, plate['A1'])\n",
-    "pipette.dispense(10, plate['A2'])\n",
-    "pipette.drop_tip(tiprack['A1'])\n",
-    "\n",
+    "pipette.pick_up_tip(tiprack.wells('A1'))\n",
+    "pipette.drop_tip(tiprack.wells('A1'))\n",
     "for c in robot.commands():\n",
     "    print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try running the cell above over and over again, and see what happens... Every time you run that cell, the list of commands should grow larger and larger."
    ]
   },
   {
@@ -106,18 +140,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is 1 command\n",
+      "There are now 0 commands\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "pipette.pick_up_tip(tiprack['A1'])\n",
-    "print(robot.commands())\n",
+    "print('There is', len(robot.commands()), 'command')\n",
     "\n",
     "robot.clear_commands()\n",
-    "print(robot.commands())"
+    "print('There are now', len(robot.commands()), 'commands')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comment\n",
+    "\n",
+    "You can add a custom message to the list of command descriptions you see when running `robot.commands()`. This command is `robot.comment()`, and it allows you to print out any information you want at the point in your protocol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <Deck>/<Slot A1>/<Container tiprack-200ul>/<Well A1>\n",
+      "Just picked up tip A1\n",
+      "Picking up tip from <Deck>/<Slot A1>/<Container tiprack-200ul>/<Well A1>\n",
+      "Just dropped tip A1\n"
+     ]
+    }
+   ],
+   "source": [
+    "robot.clear_commands()\n",
+    "\n",
+    "pipette.pick_up_tip(tiprack['A1'])\n",
+    "robot.comment(\"Just picked up tip A1\")\n",
+    "\n",
+    "pipette.pick_up_tip(tiprack['A1'])\n",
+    "robot.comment(\"Just dropped tip A1\")\n",
+    "\n",
+    "for c in robot.commands():\n",
+    "    print(c)"
    ]
   },
   {
@@ -131,21 +214,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pick_up_tip called with no reference to a tip\n"
+     ]
+    }
+   ],
    "source": [
-    "robot.simulate()\n",
-    "print(robot.get_warnings())"
+    "pipette.pick_up_tip()\n",
+    "\n",
+    "for warning in robot.simulate():\n",
+    "    print(warning)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What should be printed about above is a warning that our protocol is attempting to move 10uL, which is less than the minimum volume we have previously assigned to our pipette."
+    "What should be printed about above is a warning that our protocol says to pick up a tip, but we have not specified which tip to pick up."
    ]
   },
   {
@@ -159,23 +252,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "[]\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "robot.reset()\n",
     "print(robot.containers())\n",
     "print(robot.get_instruments())\n",
     "print(robot.commands())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -189,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
