--- a/commands/Moving.ipynb
+++ b/commands/Moving.ipynb
@@ -77,7 +77,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.move_to(tiprack['A1'])"
+    "pipette.move_to(tiprack.wells('A1'))"
    ]
   },
   {
@@ -95,10 +95,10 @@
    },
    "outputs": [],
    "source": [
-    "pipette.move_to(plate['A1'].bottom())  # move to the bottom of well A1\n",
-    "pipette.move_to(plate['A1'].top())     # move to the top of well A1\n",
-    "pipette.move_to(plate['A1'].bottom(2)) # move to 2mm above the bottom of well A1\n",
-    "pipette.move_to(plate['A1'].top(-2))   # move to 2mm below the top of well A1"
+    "pipette.move_to(plate.wells('A1').bottom())  # move to the bottom of well A1\n",
+    "pipette.move_to(plate.wells('A1').top())     # move to the top of well A1\n",
+    "pipette.move_to(plate.wells('A1').bottom(2)) # move to 2mm above the bottom of well A1\n",
+    "pipette.move_to(plate.wells('A1').top(-2))   # move to 2mm below the top of well A1"
    ]
   },
   {
@@ -116,7 +116,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.move_to(plate['A1'], strategy='direct')"
+    "pipette.move_to(plate.wells('A1'), strategy='direct')"
    ]
   },
   {
@@ -139,10 +139,10 @@
    },
    "outputs": [],
    "source": [
-    "pipette.move_to(plate['A1'])\n",
-    "pipette.move_to(plate['A1'].bottom(1), strategy='direct')\n",
-    "pipette.move_to(plate['A1'].top(-2), strategy='direct')\n",
-    "pipette.move_to(plate['A2'])"
+    "pipette.move_to(plate.wells('A1'))\n",
+    "pipette.move_to(plate.wells('A1').bottom(1), strategy='direct')\n",
+    "pipette.move_to(plate.wells('A1').top(-2), strategy='direct')\n",
+    "pipette.move_to(plate.wells('A1'))"
    ]
   },
   {
@@ -151,19 +151,20 @@
    "source": [
     "### Delay\n",
     "\n",
-    "To have your protocol pause for any given number of seconds, simply call `delay()` on your pipette. The value passed into `delay()` is the number of seconds the robot will wait until moving on to the next commands"
+    "To have your protocol pause for any given number of minutes or seconds, simply call `delay()` on your pipette. The value passed into `delay()` is the number of minutes or seconds the robot will wait until moving on to the next commands"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pipette.delay(2)       # pause for 2 seconds\n",
-    "pipette.delay(5 * 60)  # use multiplication to pause for 5 minutes (5 x 60 seconds per minute)"
+    "pipette.delay(seconds=2)             # pause for 2 seconds\n",
+    "pipette.delay(minutes=5)             # pause for 5 minutes\n",
+    "pipette.delay(minutes=5, seconds=2)  # pause for 5 minutes and 2 seconds"
    ]
   },
   {
@@ -183,9 +184,9 @@
    },
    "outputs": [],
    "source": [
-    "pipette.move_to(plate['A1'])       # move to well A1\n",
+    "pipette.move_to(plate.wells('A1')) # move to well A1\n",
     "robot.home(enqueue=True)           # home the robot on all axis\n",
-    "pipette.move_to(plate['B1'])       # move to well B1\n",
+    "pipette.move_to(plate.wells('B1')) # move to well B1\n",
     "robot.home('z', enqueue=True)      # home the Z axis only"
    ]
   }
@@ -193,7 +194,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -207,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
