--- a/commands/Tips.ipynb
+++ b/commands/Tips.ipynb
@@ -39,11 +39,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pipette.pick_up_tip(tiprack['A1'])"
+    "pipette.pick_up_tip(tiprack.wells('A1'))"
    ]
   },
   {
@@ -59,11 +59,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pipette.drop_tip(tiprack['A1'])"
+    "pipette.drop_tip(tiprack.wells('A1'))"
    ]
   },
   {
@@ -77,11 +77,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pipette.pick_up_tip(tiprack['A2'])\n",
+    "pipette.pick_up_tip(tiprack.wells('A2'))\n",
     "pipette.drop_tip(trash)"
    ]
   },
@@ -98,11 +98,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pipette.pick_up_tip(tiprack['A3'])\n",
+    "pipette.pick_up_tip(tiprack.wells('A3'))\n",
     "pipette.return_tip()"
    ]
   }
@@ -110,7 +110,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -124,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
